--- a/Views/Shared/Admin_Layout.cshtml
+++ b/Views/Shared/Admin_Layout.cshtml
@@ -136,6 +136,15 @@
                         </li>
                     </ul>
                 </li>
+
+            <li class="nav-item"></li>
+                    <a asp-controller="Admin" asp-action="AdminIssue" 
+                    class="nav-link @(currentAction == "AdminIssue" ? "active" : "")">
+                        <i class="fas fa-exclamation-circle nav-icon"></i>
+                        <span class="nav-text">Issues</span>
+                    </a>
+            </li>
+                
             </ul>
             
         </aside>
