--- a/wwwroot/css/homeowners/community.css
+++ b/wwwroot/css/homeowners/community.css
@@ -954,3 +954,16 @@ body {
     cursor: pointer;
     font-size: 12px;
 }
+
+.user-role, .comment-role {
+    font-size: 0.8em;
+    background-color: var(--brown);
+    color: white;
+    padding: 2px 6px;
+    border-radius: 4px;
+    margin-left: 5px;
+}
+
+.comment-role {
+    background-color: var(--light-brown);
+}
