--- a/Views/Shared/Dashboard_Layout.cshtml
+++ b/Views/Shared/Dashboard_Layout.cshtml
@@ -1,6 +1,6 @@
-@model HomeOwner.Models.User
+
 @{
-    var user = ViewBag.CurrentUser as User;
+    var user = ViewBag.CurrentUser  ;
 }
 
 <!DOCTYPE html>
